--- a/prompt/frontend/src/App.css
+++ b/prompt/frontend/src/App.css
@@ -1,38 +1,189 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+
+:root {
+  --blue: #0f89ec;
+  --lblue: #99e1d9;
+  --white: #f0f7f4;
+  --grey: #705d56;
+  --black: #32292f;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* colors ##0f89ec*/
+
+.colors {
+  --blue: #0f89ec;
+  --blue: #4ca6f0;
+  --blue: #78b9ee;
+}
+/* Scrollbar styling */
+::-webkit-scrollbar {
+  width: 8px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.5);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+::-webkit-scrollbar-thumb {
+  background: var(--blue);
+  border-radius: 10px;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--lblue);
+}
+
+/* Login button */
+
+.login-button {
+  position: relative;
+  background: #fff;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 1em;
+  font-weight: 400;
+  padding: 10px 30px;
+  transition: 0.5s;
+  background: var(--blue);
+  margin-right: 55%;
+}
+
+.login-button-container {
+  grid-area: login;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: end;
+  justify-content: end;
 }
 
-.App-link {
-  color: #61dafb;
+.login-button:hover {
+  background: var(--blue);
+  /*color: var(--blue);*/
+  /* box-shadow: 0 0 35px var(--blue); */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-button:before {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  background: var(--black);
+}
+
+.login-button span {
+  position: relative;
+  z-index: 1;
+}
+
+.login-button i {
+  position: absolute;
+  inset: 0;
+  display: block;
+}
+
+.login-button i::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 80%;
+  width: 10px;
+  height: 4px;
+  background: var(--black);
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+.login-button:hover i::before {
+  width: 20px;
+  left: 20%;
+}
+
+.login-button i::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 10px;
+  height: 4px;
+  background: var(--black);
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+.login-button:hover i::after {
+  width: 20px;
+  left: 80%;
+}
+
+/* Animated Button ---- button1 */
+
+.button1 {
+  position: relative;
+  background: #fff;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 1em;
+  letter-spacing: 0.1em;
+  font-weight: 400;
+  padding: 10px 30px;
+  transition: 0.5s;
+  z-index: 1;
+}
+
+.button1:hover {
+  background: var(--blue);
+  color: var(--blue);
+  /* letter-spacing: 0.5em; */
+  box-shadow: 0 0 35px var(--blue);
+}
+
+.button1:before {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  background: var(--grey);
+}
+
+.button1 span {
+  position: relative;
+  z-index: 1;
+}
+
+.button1 i {
+  position: absolute;
+  inset: 0;
+  display: block;
+}
+
+.button1 i::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 80%;
+  width: 10px;
+  height: 4px;
+  background: var(--grey);
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+a:hover i::before {
+  width: 20px;
+  left: 20%;
+}
+
+.button1 i::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 10px;
+  height: 4px;
+  background: var(--grey);
+  transform: translateX(-50%) skewX(325deg);
+  transition: 0.5s;
+}
+
+a:hover i::after {
+  width: 20px;
+  left: 80%;
 }
